--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@ body {
     font-family: "Inter", sans-serif;
 }
 
-.navbar {
+.container {
     max-width: 870px;
     width: 100%;
     margin: auto;
+}
+
+.navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,4 +31,67 @@ body {
 
 .nav-link.active {
     font-weight: 700;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    padding: 70px 0;
+}
+
+.header-text {
+    margin-left: 27px;
+}
+
+.header-strong {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;
+}
+
+.header-heading {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+
+.header-primary {
+    color: #BF7506;
+}
+
+.social-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.socail-link {
+    padding: 8px;
+    display: inline-block;
+}
+
+.header-links {
+    display: flex;
+    align-items: center;
+}
+
+.cv-download {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    margin-left: 55px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+    border-bottom: 2px solid #BF7506;
+}
+
+.cv-icon {
+    margin-right: 4px;
 }
