--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,11 @@ body {
     margin-bottom: 40px;
 }
 
+.card-image {
+    width: 400px;
+    height: 300px;
+}
+
 .card-text-wrapper {
     padding: 16px;
 }
