--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Inter", sans-serif;
 }
@@ -184,4 +188,129 @@ body {
 
 .card-button-icon {
     margin-right: 4px;
+}
+
+.developer {
+    padding: 80px 0px 20px;
+    display: flex;
+    align-items: center;
+}
+
+.developer-photo {
+    width: 360px;
+    height: 440px;
+    flex-shrink: 0;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.developer-about {
+    margin-left: 55px;
+}
+
+.developer-hello {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    color: #211B12;
+}
+
+.developer-title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 125%;
+    letter-spacing: -0.03em;
+    color: #BF7506;
+    margin-top: 4px;
+    margin-bottom: 16px;
+}
+
+.developer-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+}
+
+.motto {
+    margin: 16px 0;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    color: #DD9C3C;
+}
+
+.developer-sign {
+    max-width: 200px;
+}
+
+.skills {
+    padding: 20px 0;
+}
+
+.skills-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    color: #211B12;
+}
+
+.feedback {
+    padding: 80px 0 160px;
+}
+
+.input-group {
+    position: relative;
+    padding-top: 9px;
+    margin-bottom: 24px;
+}
+
+.input-label {
+    position: absolute;
+    top: 0;
+    left: 16px;
+    padding: 0px 8px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #83807C;
+    background: #FFFFFF
+}
+
+.input {
+    width: 435px;
+    height: 56px;
+    border: 3px solid #E0DEDC;
+    border-radius: 4px;
+}
+
+.textarea {
+    min-height: 140px;
+}
+
+.form-container {
+    max-width: 435px;
+    margin: auto;
+}
+
+.button-group {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.submit-button {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+    border: none;
+    border-bottom: 2px solid #BF7506;
+    background-color: #FFFFFF;
+    cursor: pointer;
 }
